feat: Refactor LLM provider configuration to support multiple providers and auto-detection via environment variables, enhance tool call argument handling, and introduce a `TASK.md` for workflow management.

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,43 @@
-# General Configuration
-GM_ACTIVE_PROVIDER=gemini # Options: gemini, openai
+# Provider Selection (Optional)
+# If not set, auto-detection uses: gemini > openai > deepseek > anthropic
+# GM_ACTIVE_PROVIDER=gemini
 
+# ============================================================
 # Gemini Configuration
-GM_GEMINI_API_KEY=your_gemini_api_key_here
-GM_GEMINI_MODEL=gemini-2.0-flash
-# GM_GEMINI_PROJECT_ID=your_google_cloud_project_id # Optional (Vertex AI)
-# GM_GEMINI_LOCATION=us-central1                     # Optional (Vertex AI)
+# ============================================================
+GEMINI_API_KEY=your_gemini_api_key_here
+# GEMINI_MODEL=gemini-2.0-flash
 
+# ============================================================
 # OpenAI Configuration
-GM_OPENAI_API_KEY=your_openai_api_key_here
-GM_OPENAI_BASE_URL=https://api.openai.com/v1
-GM_OPENAI_MODEL=gpt-4o
+# ============================================================
+# OPENAI_API_KEY=your_openai_api_key_here
+# OPENAI_API_BASE=https://api.openai.com/v1
+# OPENAI_MODEL=gpt-4o
 
+# ============================================================
+# DeepSeek Configuration (via OpenAI-compatible API)
+# ============================================================
+# Option 1: Use dedicated DeepSeek provider
+# DEEPSEEK_API_KEY=your_deepseek_api_key_here
+# DEEPSEEK_MODEL=deepseek-chat
+
+# Option 2: Use OpenAI provider with DeepSeek endpoint
+# GM_ACTIVE_PROVIDER=openai
+# OPENAI_API_KEY=your_deepseek_api_key_here
+# OPENAI_API_BASE=https://api.deepseek.com
+# OPENAI_MODEL=deepseek-chat
+
+# ============================================================
+# Anthropic Configuration
+# ============================================================
+# ANTHROPIC_API_KEY=your_anthropic_api_key_here
+# ANTHROPIC_MODEL=claude-sonnet-4-20250514
+
+# ============================================================
 # Security Policy
-GM_SECURITY_AUTO_APPROVE=false # Set to true to skip confirmation prompts
-GM_SECURITY_ALLOW_FS=true      # Enable filesystem tools (read_file, run_shell)
-GM_SECURITY_ALLOW_NET=true     # Enable network tools
-GM_SECURITY_WORKSPACE_ROOT=.   # Restrict file operations to this path
+# ============================================================
+GM_SECURITY_AUTO_APPROVE=false
+GM_SECURITY_ALLOW_FS=true
+GM_SECURITY_ALLOW_NET=true
+GM_SECURITY_WORKSPACE_ROOT=.
