Default API server and add log level config

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@
 # GM_ACTIVE_PROVIDER=gemini
 
 # ============================================================
+# Logging
+# ============================================================
+# GM_LOG_LEVEL=INFO # DEBUG, VERBOSE, INFO, WARNING, ERROR
+
+# ============================================================
 # Gemini Configuration
 # ============================================================
 GEMINI_API_KEY=your_gemini_api_key_here
@@ -41,3 +46,10 @@ GM_SECURITY_AUTO_APPROVE=false
 GM_SECURITY_ALLOW_FS=true
 GM_SECURITY_ALLOW_NET=true
 GM_SECURITY_WORKSPACE_ROOT=.
+
+# ============================================================
+# HTTP API
+# ============================================================
+GM_HTTP_ENABLE=true
+GM_HTTP_ADDR=:8080
+GM_HTTP_API_KEY=change-me
